# belvedere

./: .dockerignore  .gitignore  AGENT_DESIGN.md  ARCHITECTURE.md  CLAUDE.md  DATA_MODEL.md  HACKATHON_COMPLIANCE.md  LICENSE  PITCH.md  PRODUCT_BRIEF.md  PROJECT_PLAN.md  README.md  ROADMAP.md  firebase.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: reminders.tsv  settings.json  settings.local.json  status.sh
.claude/agents/: architecture-consistency-checker.md  hackathon-compliance-auditor.md  mock-llm-reviewer.md  prompt-quality-reviewer.md
.claude/hooks/: browser-host-guard.sh  ci-watchdog.sh  eraser-arch-watcher.sh  eraser-sync-reminder.sh  hackathon-check-periodic.sh  hackathon-check-reminder.sh  identifier-guard.sh  interaction-verify-reminder.sh  post-push-check.sh  pure-fn-test-guard.sh  py-check.sh  reminders-check.sh  (+7 more)
apps/orchestrator-py/: Dockerfile  README.md  pyproject.toml
apps/orchestrator-py/src/orchestrator/: __init__.py  agents.py  main.py  types.py
apps/orchestrator-py/tests/: test_agents.py
docs/: PROMPTING_GUIDE.md  autonomous-run.md  continuous-improvement-design.md  design-phase-1-b-auth.md  design-ticket-types.md  design-ui-unification.md  dev-process.md  phase-a-plan.md  refactoring-plan.md  setup-firebase-auth.md  setup-firestore-rules.md  setup-gcp.md  setup-github-wif.md  setup-mcp.md  setup-prod.md  submission-diagram.md
infra/: .firebaserc  cloudbuild.orchestrator.yaml  cloudbuild.web.yaml  cloudbuild.yaml  firestore.indexes.json  firestore.rules
scripts/: dev-local-noauth.sh
ui-mockups-v3/: index.html
(+236 files in other folders)
